--- a/package.json
+++ b/package.json
@@ -1,17 +1,33 @@
 {
-  "name": "yandex-disk-client",
+  "name": "yandex-disk-clientyandex-disk-client",
+  "homepage": "https://AlexandrCherepanov.github.io/yandex-disk-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/list": "^3.2.0",
+    "@material/react-button": "^0.15.0",
+    "@material/react-list": "^0.15.0",
+    "@material/react-material-icon": "^0.15.0",
+    "@material/react-tab": "^0.15.0",
+    "@material/react-tab-indicator": "^0.15.0",
+    "@types/classnames": "^2.2.9",
+    "@types/node": "^12.7.12",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"   
   },
   "eslintConfig": {
     "extends": "react-app"
