--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yandex-disk-clientyandex-disk-client",
+  "name": "yandex-disk-client",
   "homepage": "https://AlexandrCherepanov.github.io/yandex-disk-client",
   "version": "0.1.0",
   "private": true,
